package nl.hu.cisq1.lingo.domain.enums;

public enum GameState {
    NEW,
    IN_ROUND,
    WAITING_FOR_ROUND,
    ELIMINATED
}
