package nl.hu.cisq1.lingo.domain.enums;

public enum Mark {
    INVALID,
    ABSENT,
    PRESENT,
    CORRECT
}
