package nl.hu.cisq1.lingo.domain.enums;

public enum RoundOutcome {
    IN_PROGRESS,
    WON,
    LOST
}
