package nl.hu.cisq1.lingo.domain.exceptions;

public class InvalidFeedbackException extends RuntimeException {
    public InvalidFeedbackException(String message) {
        super(message);
    }
}
